# Otus_editor

./: CMakeLists.txt  editor_controller.hpp  editor_model.hpp  editor_view.hpp  main.cpp  shape.hpp
.github/workflows/: release.yml
